# audio-transcriber

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/audio_transcriber/: __init__.py  cli.py
