[project]
name = "audio-transcriber"
version = "0.1.0"
description = "GPU-friendly audio transcription CLI built on faster-whisper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
]

[project.scripts]
audio-transcriber = "audio_transcriber.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
cuda-required = [
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130", marker = "sys_platform != 'darwin'" }
torchvision = { index = "pytorch-cu130", marker = "sys_platform != 'darwin'" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
